--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <script src="src/note-model.js"></script>
     <script src="src/note-list-model.js"></script>
     <script src="src/note-list-view-model.js"></script>
   </head>
   <body>
+    <div id="note">Click on a note to view it</div>
     <div id="app">hello</div>
     <script src='src/note-controller.js'></script>
     <script src='index.js'></script>
