--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="note">Click on a note to view it</div>
-    <div id="app">hello</div>
+    <div id="app">You currently have no notes</div>
     <script src='src/note-controller.js'></script>
     <script src='index.js'></script>
   </body>
