added form to index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <div id="app">You currently have no notes</div>
     <script src='src/note-controller.js'></script>
     <script src='index.js'></script>
+
+    <form action='#notes/new' method='post'>
+     <textarea id='text'> </textarea>
+      <button type="submit" class="pure-button">Submit</button>
+    </form>
   </body>
 </html>
