--- a/SpecDummer.html
+++ b/SpecDummer.html
@@ -7,9 +7,9 @@
   <!-- include source files here... -->
   <script src="src/note-model.js"></script>
   <script src="src/note-list-model.js"></script>
-  <script src="src/note-list-view-model.js"></script>
-  <script src="src/single-note-view.js"></script>
-  <script src='src/note-controller.js'></script>
+  <script src="src/note-list-view.js"></script>
+  <script src="src/note-controller.js"></script>
+    <script src="src/single-note-view-model.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/assert.js"></script>
