--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="src/note-model.js"></script>
     <script src="src/note-list-model.js"></script>
     <script src="src/note-list-view-model.js"></script>
+    <script src="src/single-note-view.js"></script>
   </head>
   <body>
     <div id="note">Click on a note to view it</div>
